k8s/remote-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vista-monte-mar-app
  namespace: vista-monte-mar
spec:
  selector:
    app: vista-monte-mar-app
  ports:
    - name: http
      port: 80
      targetPort: 80
